[project]
name = "dis-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "langsmith>=0.6.2",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
